IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
6/26/10: Fixed problem with Ccderaser potentially not finding anything in
difference search if nothing is examined in the peak search (In 4.1).

6/23/10: Many blendmont changes: memory is allocated as needed; edges marked
in a model can be excluded to keep them from ruining the piece placement; 
computation of piece shifts is much faster and handles edge exclusion; pieces
can overlap by > 50% and more than 2 pieces in a direction can overlap a given
point; artifacts are reduced when adjacent edges in a row or column do not
overlap in the narrow dimension; X and Y edges can be computed in separate
runs in parallel, chunks can be written in Y as well as Z, and parallel
writing is protected with boundary files.  A script, Splitblend, was added to
set up command files for parallel runs of Blendmont.

6/23/10: Prevented writing large last boundary file when doing Y chunks
(In 4.1).

6/18/10: IMOD_4-2-2
6/18/10: Fixed some bugs that crashed Boxstartend (In 4.1).

6/18/10: Popping up the last warning found during a processchunks run (In 4.1).

6/14/10: IMOD_4-1-3 released
6/14/10: Added warnings from Tilt if output is truncated and if there are
extreme values from GPU; made Processchunks pass on warnings and copy first 
nonsync log file instead of startup log file (In 4.1).

6/8/10: In eTomo fixed the UI test so that it can get through fine alignment.

6/4/10: In eTomo remembering the last location of the window.

6/2/10: Made new routine for sorting points on two surfaces for use by
Tiltalign, beadtrack, and Sortbeadsurfs; added option to Sortbeadsurfs for 
testing the routine.

6/1/10: Fixed coloring of Tiltalign output model when one contour per object.

5/28/10: In eTomo changed messages about missing cpu.adoc and RAPTOR
functionality.

5/28/10: Stopped short labels from going on upper line in Info window (In 4.1).
