@@ -123,6 +123,12 @@ find a small shift to refine your translation.  The parameters for padding and
 filtering are based on the settings that are most successful in Blendmont
 when finding overlaps between adjacent pieces.
 <P>
+The extent of the area being correlated is shown temporarily when any of the
+related controls are used.  The box is drawn in yellow when the size or shift
+limit is adjusted; it is drawn in green after a correlation that succeeds in
+giving a peak and in red when the correlation fails to yield a peak within the
+shift limit.
+<P>
 If the program was started with "-a" to specify a <B>Global rotation</B> angle,
 this angle is displayed and can be adjusted with the spin box below the
 <B>Stretch Angle</B> slider.  Use the up and down arrows to adjust the angle by
